pricing cards adjusted, yml files added for both contact and pricing.

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -7,11 +7,10 @@ published: true
   <div class="wrapper">
     <div class="grid grid--center">
       <div class="grid__item palm--one-whole desk--two-thirds contact">
-        <h1>Contact Us</h1>
-        <span>You can contact us using the form below, or on Facebook Messenger, of course.
-       <br />
-    <div><a href= "https://www.messenger.com/t/apentubot"> <img src="/assets/img/layout/facebook-messenger.png" style="width:150px" align="center"></a> </span>
-    
+        <h1>{{ site.data.contact-info.title }}</h1>
+        <span>{{ site.data.contact-info.blurb }} </span>
+    <div class="messenger-image">
+      <a href= "https://www.messenger.com/t/apentubot"> <img src="/assets/img/layout/facebook-messenger-reduced.png" style="width:150px" align="center"></a>
     </div>
     <div class="grid">
       <div class="grid__item">
