--- a/_sass/apentu/elements/_cards.scss
+++ b/_sass/apentu/elements/_cards.scss
@@ -69,16 +69,19 @@ $card-padding: 20px;
 
 .pricing-card__content {
   a {
-    margin-bottom: $card-padding;
+    margin-top: $card-padding + 10;
   }
   ul {
     list-style: none;
     padding: 0;
     margin: 0;
     li {
-      margin-bottom: 10px;
+      font-size: 14px;
+      padding: 10px;
+      border-bottom: 1px solid $grey-color-light;
       &:last-child {
-        margin-bottom: 0;
+        padding-bottom: 0;
+        border: 0;
       }
     }
   }
@@ -99,4 +102,12 @@ $card-padding: 20px;
   span {
     color: $logo-blue;
   }
+}
+
+span.pricing-card__content__blurb {
+  display: block;
+  margin-bottom: $card-padding;
+  font-size: 14px;
+  color: $grey-color-dark;
+  text-align: center;
 }
