--- a/_layouts/pricing.html
+++ b/_layouts/pricing.html
@@ -14,7 +14,7 @@ layout: default
       <div class="grid__item palm--one-whole lap--one-third desk--one-third">
         <div class="pricing-card">
           <div class="pricing-card__header">
-            <span class="pricing-card__header__title">Basic</span>
+            <span class="pricing-card__header__title">£259 per month</span>
           </div>
           <div class="pricing-card__content">
             <span class="pricing-card__content__blurb">{{ site.data.pricing-info.basic-blurb }}</span>
@@ -40,7 +40,7 @@ layout: default
    --><div class="grid__item palm--one-whole lap--one-third desk--one-third">
         <div class="pricing-card">
           <div class="pricing-card__header">
-            <span class="pricing-card__header__title">Standard</span>
+            <span class="pricing-card__header__title">£499 per month</span>
           </div>
           <div class="pricing-card__content">
             <span class="pricing-card__content__blurb">{{ site.data.pricing-info.standard-blurb }}</span>
@@ -63,7 +63,7 @@ layout: default
    --><div class="grid__item palm--one-whole lap--one-third desk--one-third">
         <div class="pricing-card last-card">
           <div class="pricing-card__header pricing-card__header--premium">
-            <span class="pricing-card__header__title">Premium</span>
+            <span class="pricing-card__header__title">£899 per month</span>
           </div>
           <div class="pricing-card__content pricing-card__content--premium">
             <span class="pricing-card__content__blurb">{{ site.data.pricing-info.premium-blurb }}</span>
