pricing card added. False features removed.

--- a/_layouts/pricing.html
+++ b/_layouts/pricing.html
@@ -11,22 +11,17 @@ layout: default
       </div>
     </div>
     <div class="grid">
-      <div class="grid__item palm--one-whole lap--one-third desk--one-third">
+      <div class="grid__item palm--one-whole lap--one-third desk--one-quarter">
         <div class="pricing-card">
           <div class="pricing-card__header">
-            <span class="pricing-card__header__title">Small Agency</span>
+            <span class="pricing-card__header__title">{{ site.data.pricing-info.basic-title }}</span>
           </div>
           <div class="pricing-card__content">
             <span class="pricing-card__content__blurb">{{ site.data.pricing-info.basic-blurb }}</span>
             <ul>
               {% for feature in site.data.pricing-features %}
               {% if feature.basic == true %}
-              <li><span><i class="fa fa-check" aria-hidden="true"></i></span>{{ feature.name }}</li>
-              {% endif %}
-              {% endfor %}
-              {% for feature in site.data.pricing-features %}
-              {% if feature.basic == false %}
-              <li class="no-feature"><span><i class="fa fa-times" aria-hidden="true"></i></span>{{ feature.name }}</li>
+              <li><span class="pricing-card__content__icon"><i class="fa fa-check" aria-hidden="true"></i></span><span class="pricing-card__content__name">{{ feature.name }}</span></li>
               {% endif %}
               {% endfor %}
               <!-- <li><span><i class="fa fa-check" aria-hidden="true"></i></span>Item 2</li>
@@ -37,22 +32,17 @@ layout: default
           </div>
         </div>
       </div><!--
-   --><div class="grid__item palm--one-whole lap--one-third desk--one-third">
+   --><div class="grid__item palm--one-whole lap--one-third desk--one-quarter">
         <div class="pricing-card">
           <div class="pricing-card__header">
-            <span class="pricing-card__header__title">Medium Agency</span>
+            <span class="pricing-card__header__title">{{ site.data.pricing-info.standard-title }}</span>
           </div>
           <div class="pricing-card__content">
             <span class="pricing-card__content__blurb">{{ site.data.pricing-info.standard-blurb }}</span>
             <ul>
               {% for feature in site.data.pricing-features %}
               {% if feature.standard == true %}
-              <li><span><i class="fa fa-check" aria-hidden="true"></i></span>{{ feature.name }}</li>
-              {% endif %}
-              {% endfor %}
-              {% for feature in site.data.pricing-features %}
-              {% if feature.standard == false %}
-              <li class="no-feature"><span><i class="fa fa-times" aria-hidden="true"></i></span>{{ feature.name }}</li>
+              <li><span class="pricing-card__content__icon"><i class="fa fa-check" aria-hidden="true"></i></span><span class="pricing-card__content__name">{{ feature.name }}</span></li>
               {% endif %}
               {% endfor %}
             </ul>
@@ -60,29 +50,42 @@ layout: default
           </div>
         </div>
       </div><!--
-   --><div class="grid__item palm--one-whole lap--one-third desk--one-third">
-        <div class="pricing-card last-card">
-          <div class="pricing-card__header pricing-card__header--premium">
-            <span class="pricing-card__header__title">Large Agency</span>
+   --><div class="grid__item palm--one-whole lap--one-third desk--one-quarter">
+        <div class="pricing-card">
+          <div class="pricing-card__header">
+            <span class="pricing-card__header__title">{{ site.data.pricing-info.premium-title }}</span>
           </div>
           <div class="pricing-card__content pricing-card__content--premium">
             <span class="pricing-card__content__blurb">{{ site.data.pricing-info.premium-blurb }}</span>
             <ul>
               {% for feature in site.data.pricing-features %}
               {% if feature.premium == true %}
-              <li><span><i class="fa fa-check" aria-hidden="true"></i></span>{{ feature.name }}</li>
-              {% endif %}
-              {% endfor %}
-              {% for feature in site.data.pricing-features %}
-              {% if feature.premium == false %}
-              <li class="no-feature"><span><i class="fa fa-times" aria-hidden="true"></i></span>{{ feature.name }}</li>
+              <li><span class="pricing-card__content__icon"><i class="fa fa-check" aria-hidden="true"></i></span><span class="pricing-card__content__name">{{ feature.name }}</span></li>
               {% endif %}
               {% endfor %}
             </ul>
-            <a class="apentu-btn apentu-btn--fullwidth apentu-btn--logoblue--reverse" href="#">Request Info</a>
+            <a class="apentu-btn apentu-btn--fullwidth apentu-btn--lightblue--reverse" href="#">Request Info</a>
           </div>
         </div>
-      </div>
+      </div><!--
+    --><div class="grid__item palm--one-whole lap--one-third desk--one-quarter">
+         <div class="pricing-card last-card">
+           <div class="pricing-card__header pricing-card__header--premium">
+             <span class="pricing-card__header__title">{{ site.data.pricing-info.enterprise-title }}</span>
+           </div>
+           <div class="pricing-card__content pricing-card__content--premium">
+             <span class="pricing-card__content__blurb">{{ site.data.pricing-info.enterprise-blurb }}</span>
+             <ul>
+               {% for feature in site.data.pricing-features %}
+               {% if feature.premium == true %}
+               <li><span class="pricing-card__content__icon"><i class="fa fa-check" aria-hidden="true"></i></span><span class="pricing-card__content__name">{{ feature.name }}</span></li>
+               {% endif %}
+               {% endfor %}
+             </ul>
+             <a class="apentu-btn apentu-btn--fullwidth apentu-btn--logoblue--reverse" href="#">Request Info</a>
+           </div>
+         </div>
+       </div>
     </div>
   </div>
 </div>
