large agency ticks corrected

--- a/_layouts/pricing.html
+++ b/_layouts/pricing.html
@@ -55,7 +55,7 @@ layout: default
           <div class="pricing-card__header">
             <span class="pricing-card__header__title">{{ site.data.pricing-info.premium-title }}</span>
           </div>
-          <div class="pricing-card__content pricing-card__content--premium">
+          <div class="pricing-card__content">
             <span class="pricing-card__content__blurb">{{ site.data.pricing-info.premium-blurb }}</span>
             <ul>
               {% for feature in site.data.pricing-features %}
