--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -29,6 +29,7 @@ $lightblue-one:     #006494;
 $lightblue-two:     #00a6fb;
 $apentu-lightgrey:  #F4F4F4;
 $red:               #c33c54;
+$platinum:          #e6e6ea;
 
 // Width of the content area
 $content-width:    1170px;
