--- a/_sass/apentu/elements/_buttons.scss
+++ b/_sass/apentu/elements/_buttons.scss
@@ -25,7 +25,7 @@ $button-border: 2px;
   background-color: $lightblue-one;
   border-color: $lightblue-one;
   &:hover {
-    background-color: $background-color;
+    background-color: $platinum;
     color: $lightblue-one;
   }
 }
