Update form redirect

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -18,7 +18,7 @@ layout: default
           <input type="text" name="fullname" value="">
           <label for="email">Email</label>
           <input type="text" name="_replyto" value="">
-          <input type="hidden" name="__redirect" value="https://apentu.github.io">
+          <input type="hidden" name="__redirect" value="http://www.apentu.com">
           <label for="enquiry">Enquiry</label>
           <textarea name="enquiry" rows="8" cols="80"></textarea>
           <input class="apentu-btn apentu-btn--fullwidth apentu-btn--lightblue" type="submit" value="Submit Details">
