--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -13,7 +13,7 @@ layout: default
     </div>
     <div class="grid">
       <div class="grid__item">
-        <form class="contact-form" action="https://www.formingo.co/submit/tjm@apentu.com" method="POST">
+        <form class="contact-form" action="https://www.formingo.co/submit/noble@apentu.com" method="POST">
           <label for="fullname">Full Name</label>
           <input type="text" name="fullname" value="">
           <label for="_replyto">Email</label>
