--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -13,12 +13,12 @@ layout: default
     </div>
     <div class="grid">
       <div class="grid__item">
-        <form class="contact-form" action="https://www.formingo.co/submit/noble@apentu.com" method="POST">
+        <form class="contact-form" action="https://www.formingo.co/submit/owenthomasclark@me.com" method="POST">
           <label for="fullname">Full Name</label>
           <input type="text" name="fullname" value="">
           <label for="_replyto">Email</label>
           <input type="email" name="__replyto" value="">
-          
+          <input type="hidden" name="__redirect" value="http://www.apentu.com">
           <label for="enquiry">Enquiry</label>
           <textarea name="enquiry" rows="8" cols="80"></textarea>
           <input class="apentu-btn apentu-btn--fullwidth apentu-btn--lightblue" type="submit" value="Submit Details">
