--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -13,12 +13,12 @@ layout: default
     </div>
     <div class="grid">
       <div class="grid__item">
-        <form class="contact-form" action="https://www.formingo.co/submit/tim@apentu.com" method="POST">
+        <form class="contact-form" action="https://getsimpleform.com/messages?form_api_token=54e2ad4db68c738a1b58ebbfab37aa1e" method="POST">
           <label for="fullname">Full Name</label>
           <input type="text" name="fullname" value="">
-          <label for="_replyto">Email</label>
+          <label for="__replyto">Email</label>
           <input type="email" name="__replyto" value="">
-          <input type="hidden" name="__redirect" value="http://www.apentu.com">
+          <input type="hidden" name="redirect_to" value="http://www.apentu.com">
           <label for="enquiry">Enquiry</label>
           <textarea name="enquiry" rows="8" cols="80"></textarea>
           <input class="apentu-btn apentu-btn--fullwidth apentu-btn--lightblue" type="submit" value="Submit Details">
